Rearranged and fixed a few issues with readability

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,30 +2,46 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
   background: url("../images/mudassir-ali-1582117-unsplash.jpg") no-repeat
     center center/cover;
   /* background: #333; */
   color: #fff;
   line-height: 1.6;
 }
+.navTitle {
+  min-width: 292px;
+  height: 100%;
+  margin: auto;
+  padding-left: 32px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#downloadResume {
+  font-size: 20px;
+  color: #000;
+}
 
 .wrapper {
-  width: 90%;
+  padding-bottom: 10px;
+  width: 100%;
   margin: auto;
   display: flex;
   flex-flow: row wrap;
 }
 
 .wrapper > * {
-  padding: 15px;
   flex: 1 100%;
 }
 
-.container {
+
+main {
+  margin-top: 65px;
+  padding: 65px 20px 20px 20px;
   width: 100%;
   /* CSS Smooth Scroll */
   overflow-y: scroll;
@@ -33,16 +49,18 @@ body {
   scroll-snap-type: y mandatory;
 }
 
+.icons {
+  text-align: center;
+}
+
 .card {
   display: block;
+  width: 100%;
   background: rgba(0, 0, 0, 0.5);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 2px;
-  padding-top: 0;
-}
-.card {
-  padding: 0px 16px 16px 2px;
+  padding: 0px 20px 20px 20px;
 }
 
 .card:hover {
@@ -53,8 +71,8 @@ body {
 input#myFile {
   border-radius: 1px;
   border: none;
-  padding: 0.2em 2em;
-  width: 80%;
+  padding: 0;
+  width: 100%;
   margin: auto;
 }
 
@@ -68,10 +86,19 @@ textarea,
 .contactHeader {
   border-radius: 1px;
   border: none;
-  padding: 0.2em 2em;
+  padding: 5px 32px;
   width: 100%;
 }
-
+.actions {
+  border-radius: 1px;
+  border: none;
+  padding: 5px 32px;
+}
+#submitBtn {
+  margin: 0;
+  text-align: left;
+  width: 120px;
+}
 .lead {
   font-size: 1.5rem;
 }
@@ -86,6 +113,9 @@ textarea,
   background: rgba(0, 0, 0, 1);
 }
 
+ul {
+  padding-left: 32px;
+}
 .navbar ul {
   display: flex;
   list-style: none;
@@ -102,6 +132,7 @@ i {
   color: black;
 }
 #downloadButton {
+  text-align: center;
   margin: auto;
   margin-top: 20px;
   border-radius: 5px;
@@ -121,13 +152,15 @@ i {
 .navbar ul li a:hover {
   color: skyblue;
 }
-
+.contact {
+  width: 100%;
+}
 section {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
+  text-align: left;
 
   margin-top: auto;
 }
@@ -146,7 +179,7 @@ img {
   border: 0;
   margin-bottom: 0.3rem;
 }
-i:hover {
+i:hover, #downloadButton:hover {
   color: white;
 }
 .button:hover,
@@ -192,48 +225,79 @@ ul {
   border-radius: 5px;
 }
 h1 {
-  padding-top: 0;
+  padding: 0 32px;
   margin-top: 0;
   font-size: 4em;
 }
 
 /* Mobile */
 @media screen and (max-width: 640px) {
-  h1 {
-    font-size: 1.8em;
+  .navTitle {
+    min-width: 292px;
+    height: 100%;
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 0px;
   }
-  h2 {
-    font-size: 1em;
+  h1 {
+    font-size: 2.4em;
+  }
+  section#about {
+    padding-top: 150px;
+    padding-bottom: 50px;
+  }
+  section#work {
+    padding-top: 150px;
+    padding-bottom: 50px;
+  }
+  .navbar {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    display: block;
+    width: 100%;
+    height: 100px;
+    background: rgba(0, 0, 0, 1);
+  }
+  .navbar > ul {
+    width: 279px;
   }
   .navbar ul li {
+    display: block;
     margin: 0 0.2rem;
     padding: 1rem 0.8rem;
+    padding-left: 32px;
+    float: left;
   }
   img {
     max-width: 100%;
-    height: 20vh;
+    /* height: 20vh; */
   }
 }
 
 /* Tablets */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 641px) and (max-width: 1029px) {
+  .navTitle {
+    min-width: 292px;
+    height: 100%;
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 12px;
+  }
   .titleContainer {
     margin-top: 2em;
     margin-bottom: 2em;
   }
-  section#home {
-    padding: 4em 0;
-  }
   section#about {
-    padding: 5em 0;
+    padding-top: 150px;
+    padding-bottom: 100px;
   }
-  section#service {
-    padding: 1em 0;
-    margin: auto;
-    max-width: 80%;
+  section#work {
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
   section#contact {
-    padding: 6em 0;
+    padding: 5em 0;
   }
   img {
     max-width: 100%;
@@ -242,21 +306,26 @@ h1 {
 }
 
 /* Desktop */
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1030px) {
+  .navTitle {
+    min-width: 292px;
+    height: 100%;
+    margin: auto;
+    padding-top: 10px;
+    padding-bottom: 12px;
+  }
   .titleContainer {
     margin-top: 2em;
     margin-bottom: 2em;
   }
-  section#home {
-    padding: 6em 0;
-  }
   section#about {
-    padding: 6em 0;
+    padding-top: 100px;
+    padding-bottom: 200px;
   }
-  section#service {
-    padding: 1em 0;
+  section#work {
     margin: auto;
-    max-width: 80%;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
   section#contact {
     padding: 5em 0;
