--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -1,5 +1,4 @@
 .resumeHeader {
-  margin-top: 70px;
   background-color: #363636;
   color: #fcfcfc;
   grid-area: header;
@@ -10,14 +9,18 @@
   background-color: #cddfd3;
   color: #363636;
   grid-area: left;
-  padding: 20px;
+  padding: 32px 32px 64px 32px;
 }
 
 .resumeBody2 {
   background-color: #fcfcfc;
   color: #363636;
   grid-area: right;
-  padding: 20px;
+  padding: 32px 32px 64px 32px;
+}
+
+#jobTitleH2 {
+  padding: 0 32px 12px 64px;
 }
 
 .resumeConactContainer {
